Why did my slope stop working?

--- a/locations/caribou.env
+++ b/locations/caribou.env
@@ -1,7 +1,9 @@
 #!/usr/bin/env sh
 
-set -ex
+set -e
 
+export NAME="caribou"
+export DISPLAY_NAME="Caribou"
 export XMIN=-105.62
 export XMAX=-105.57
 export YMIN=39.97
